--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,119 @@
+// @import "_products.scss";
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+}
+
+.Container {
+    margin: 0;
+
+    .theme_button {
+        margin-left: 100%;
+    }
+
+    .LightSwitch {
+        display: flex;
+        align-items: center;
+    }
+
+    .navbar_div {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 30px 10px 30px;
+        height: 50px;
+
+        section {
+            display: flex;
+
+            .NavLink {
+                color: #000;
+                text-decoration: none;
+                padding: 0 0 0 20px;
+            }
+        }
+
+        .nav_section_right {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 4%;
+
+            .nav_cart_icon {
+                cursor: pointer;
+            }
+        }
+
+    }
+
+    .main_home_div {
+        width: 80%;
+        display: flex;
+        gap: 30px;
+
+        .main_home_categories {
+            width: 15%;
+
+            p:hover {
+                text-decoration: underline;
+            }
+
+            .category_title {
+                font-size: 13px;
+                margin-bottom: 7px;
+                color: gray;
+            }
+
+            .category_title:hover {
+                text-decoration: none;
+            }
+        }
+
+        .main_home_display {
+            width: 70%;
+            padding: 10px;
+            // overflow-y: scroll;
+
+            .product_card_div {
+                display: flex;
+                flex-wrap: wrap;
+            }
+
+
+        }
+
+        .main_home_sorting {
+            width: 10%;
+
+            .sorting_title {
+                font-size: 13px;
+                margin-bottom: 7px;
+                color: gray;
+            }
+        }
+
+        p {
+            margin: 0;
+            cursor: pointer;
+        }
+    }
+}
+
 .Container-dark {
-    background-color: #000;
+    background-color: #141313;
+    color: #fff;
+
+    .navbar_div {
+        section {
+            .NavLink {
+                color: #fff;
+            }
+        }
+    }
 }
 
 .Container-light {
-    background-color: #eee;
+    background-color: #fff;
+    color: #000;
+
 }
