--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,7 +47,7 @@ body {
     }
 
     .main_home_div {
-        width: 80%;
+        width: 70%;
         display: flex;
         gap: 30px;
 
@@ -77,6 +77,9 @@ body {
             .product_card_div {
                 display: flex;
                 flex-wrap: wrap;
+                gap: 20px;
+
+
             }
 
 
