--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-// @import "_products.scss";
+@import "_productInfo.scss";
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -30,6 +30,14 @@ body {
                 color: #000;
                 text-decoration: none;
                 padding: 0 0 0 20px;
+            }
+        }
+
+        .nav_section_left {
+            .website_name {
+                font-style: oblique;
+                font-weight: 600;
+                cursor: pointer;
             }
         }
 
@@ -72,13 +80,20 @@ body {
         .main_home_display {
             width: 70%;
             padding: 10px;
-            // overflow-y: scroll;
 
             .product_card_div {
                 display: flex;
                 flex-wrap: wrap;
                 gap: 20px;
 
+                .card_div {
+                    border: none;
+                }
+
+                .card_div:hover {
+                    border: 2px solid fuchsia;
+                    border-radius: 8px;
+                }
 
             }
 
