--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 .product_info_div {
   display: flex;
   justify-content: center;
-  min-height: 92.2vh; }
+  height: 92.3vh; }
   .product_info_div .productInfo {
     width: 80%;
     display: flex;
@@ -21,15 +21,32 @@
         .product_info_div .productInfo .productInfo_images section .productInfo_otherImg {
           width: 100px;
           height: 100px;
-          border-radius: 10px; }
+          border-radius: 10px;
+          border: 4px solid transparent; }
         .product_info_div .productInfo .productInfo_images section .productInfo_otherImg:hover {
-          border: 1px solid fuchsia; }
+          border: 2px solid red; }
       .product_info_div .productInfo .productInfo_images .productInfo_mainImg {
+        max-width: 500px;
+        max-height: 600px;
         object-fit: cover;
         border-radius: 10px; }
     .product_info_div .productInfo .productInfo_content {
       width: 35%;
       padding: 130px 30px 30px 130px; }
+
+:root ::-webkit-scrollbar {
+  width: 15px; }
+
+:root ::-webkit-scrollbar-track {
+  background: darkgray; }
+
+:root ::-webkit-scrollbar-thumb {
+  background-color: gray;
+  border-radius: 6px;
+  border: 3px solid lightgray; }
+
+:root .MuiDrawer-paper {
+  width: 400px; }
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -70,6 +87,9 @@ body {
     gap: 30px; }
     .Container .main_home_div .main_home_categories {
       width: 15%; }
+      .Container .main_home_div .main_home_categories p {
+        margin-bottom: 5px;
+        text-transform: capitalize; }
       .Container .main_home_div .main_home_categories p:hover {
         text-decoration: underline; }
       .Container .main_home_div .main_home_categories .category_title {
@@ -86,9 +106,9 @@ body {
         flex-wrap: wrap;
         gap: 20px; }
         .Container .main_home_div .main_home_display .product_card_div .card_div {
-          border: none; }
+          border: 2px solid transparent; }
         .Container .main_home_div .main_home_display .product_card_div .card_div:hover {
-          border: 2px solid fuchsia;
+          border: 2px solid red;
           border-radius: 8px; }
     .Container .main_home_div .main_home_sorting {
       width: 10%; }
@@ -105,7 +125,23 @@ body {
   color: #fff; }
   .Container-dark .navbar_div section .NavLink {
     color: #fff; }
+  .Container-dark ::-webkit-scrollbar {
+    width: 15px; }
+  .Container-dark ::-webkit-scrollbar-track {
+    background: darkgray; }
+  .Container-dark ::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 6px;
+    border: 3px solid lightgray; }
 
 .Container-light {
   background-color: #fff;
   color: #000; }
+  .Container-light ::-webkit-scrollbar {
+    width: 15px; }
+  .Container-light ::-webkit-scrollbar-track {
+    background: lightgray; }
+  .Container-light ::-webkit-scrollbar-thumb {
+    background-color: lightgray;
+    border-radius: 6px;
+    border: 3px solid gray; }
