--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -89,10 +89,6 @@ body {
                 text-transform: capitalize;
             }
 
-            p:hover {
-                text-decoration: underline;
-            }
-
             .category_title {
                 font-size: 13px;
                 margin-bottom: 7px;
@@ -170,6 +166,24 @@ body {
         border: 3px solid lightgray;
     }
 
+    .main_home_div {
+        .main_home_categories {
+            .categoryLink {
+                color: #fff;
+                text-decoration: none;
+            }
+
+            .categoryLink:hover {
+                text-decoration: underline;
+            }
+
+            .categoryLink.activeCategory {
+                color: cyan;
+                text-decoration: underline;
+            }
+        }
+    }
+
 }
 
 .Container-light {
@@ -188,6 +202,24 @@ body {
         background-color: lightgray;
         border-radius: 6px;
         border: 3px solid gray;
+    }
+
+    .main_home_div {
+        .main_home_categories {
+            .categoryLink {
+                color: #000;
+                text-decoration: none;
+            }
+
+            .categoryLink:hover {
+                text-decoration: underline;
+            }
+
+            .categoryLink.activeCategory {
+                color: cyan;
+                text-decoration: underline;
+            }
+        }
     }
 
 }
