--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -178,7 +178,7 @@ body {
             }
 
             .categoryLink.activeCategory {
-                color: cyan;
+                color: red;
                 text-decoration: underline;
             }
         }
@@ -216,7 +216,7 @@ body {
             }
 
             .categoryLink.activeCategory {
-                color: cyan;
+                color: red;
                 text-decoration: underline;
             }
         }
