--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,7 +41,7 @@ body {
     .navbar_div {
         display: flex;
         justify-content: space-between;
-        padding: 10px 30px 10px 30px;
+        padding: 10px 30px;
         height: 50px;
 
         section {
@@ -66,7 +66,7 @@ body {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            width: 4%;
+            gap: 18px; // width: 10%;
 
             .nav_cart_icon {
                 cursor: pointer;
