--- a/src/scss/_productInfo.scss
+++ b/src/scss/_productInfo.scss
@@ -1,7 +1,7 @@
 .product_info_div {
     display: flex;
     justify-content: center;
-    height: 92.3vh;
+    height: 841px;
 
     .productInfo {
         width: 80%;
@@ -9,6 +9,7 @@
         justify-content: space-between;
         margin: 30px 100px 30px 100px;
         border-radius: 20px;
+        height: 730px;
 
         .productInfo_images {
             width: 50%;
@@ -26,7 +27,7 @@
                     width: 100px;
                     height: 100px;
                     border-radius: 10px;
-                    border: 4px solid transparent;
+                    border: 2px solid transparent;
                 }
 
                 .productInfo_otherImg:hover {
