--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,7 +17,47 @@
     }
 
     .MuiDrawer-paper {
-        width: 400px;
+        width: 600px;
+
+        .drawer_content {
+            border: 2px solid white;
+
+            .cartContent {
+                padding: 30px;
+
+                .cartContentSection {
+                    display: flex;
+                    justify-content: space-between;
+
+                    .cartContentSection_left {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        img {
+                            width: 100px;
+                            height: 100px;
+                            border: 1px solid #141313;
+                            border-radius: 15px;
+                        }
+                    }
+
+                    .cartContentSection_right {
+                        width: 75%;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                    }
+                }
+            }
+
+            .cartContent_total {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+
     }
 }
 
@@ -56,8 +96,9 @@ body {
 
         .nav_section_left {
             .website_name {
-                font-style: oblique;
-                font-weight: 600;
+                display: flex;
+                justify-content: center;
+                font-weight: 900;
                 cursor: pointer;
             }
         }
@@ -131,6 +172,11 @@ body {
                 margin-bottom: 7px;
                 color: gray;
             }
+
+            .sortingLink:hover {
+                text-decoration: underline;
+            }
+
         }
 
         p {
@@ -183,6 +229,7 @@ body {
             }
         }
     }
+
 
 }
 
