--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,7 +49,7 @@
 :root .MuiDrawer-paper {
   width: 600px; }
   :root .MuiDrawer-paper .drawer_content {
-    border: 2px solid white; }
+    overflow-y: scroll; }
     :root .MuiDrawer-paper .drawer_content .cartContent {
       padding: 30px; }
       :root .MuiDrawer-paper .drawer_content .cartContent .cartContentSection {
@@ -63,7 +63,8 @@
             width: 100px;
             height: 100px;
             border: 1px solid #141313;
-            border-radius: 15px; }
+            border-radius: 15px;
+            object-fit: cover; }
         :root .MuiDrawer-paper .drawer_content .cartContent .cartContentSection .cartContentSection_right {
           width: 75%;
           display: flex;
