--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,7 +20,7 @@
         width: 600px;
 
         .drawer_content {
-            border: 2px solid white;
+            overflow-y: scroll;
 
             .cartContent {
                 padding: 30px;
@@ -39,6 +39,7 @@
                             height: 100px;
                             border: 1px solid #141313;
                             border-radius: 15px;
+                            object-fit: cover;
                         }
                     }
 
